<resources>
    <string name="app_name">PS Game Inventory</string>
    <string name="empty_view_title_text">Inventory is empty</string>
    <string name="empty_view_subtitle_text">Get started by adding a game</string>
    <string name="category_overview">over view</string>
    <string name="hint_game_name">Name of game</string>
    <string name="hint_ps_genre">choose genre</string>
    <string name="category_genre">choose genre</string>
    <string name="category_console">choose console</string>
    <string name="category_quantity">quantity</string>
    <string name="hint_game_in_stock">game in stock</string>
    <string name="unknown_stock">no quantity</string>
    <string name="editor_activity_title_new_game">add a game</string>
    <string name="editor_activity_title_edit_game">Edit Game</string>
    <string name="SCI_FI">SCI-FI</string>
    <string name="ACTION">ACTION</string>
    <string name="SPORT">SPORT</string>
    <string name="ADVENTURE">ADVENTURE</string>
    <string name="SHOOTING">SHOOTING</string>
    <string name="PS">PS</string>
    <string name="PS1">PS1</string>
    <string name="PS2">PS2</string>
    <string name="PS3">PS3</string>
    <string name="PS4">PS4</string>
    <string name="editor_insert_game_failed">Error with Saving Game</string>
    <string name="editor_insert_game_successful">Game saved</string>
    <string name="editor_update_game_failed">Error with Updating Game</string>
    <string name="editor_update_game_successful">Game updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="delete_dialog_msg">Delete this game</string>
    <string name="delete">Delete this Item</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_game_failed">Error with delet game</string>
    <string name="editor_delete_game_successful">Game deleted</string>
    <string name="action_save">Save</string>
    <string name="action_sale">sale</string>
    <string name="action_insert_dummy_data">Insert Dummy data</string>
    <string name="action_delete_all_entries">Delete All Games</string>
    <string name="genre_adventure">ADVENTURE</string>
    <string name="genre_shooting">SHOOTING</string>
    <string name="genre_sport">SPORT</string>
    <string name="genre_action">ACTION</string>
    <string name="genre_sci_fi">SCI-FI</string>
    <string name="genre_unknown">UNKNOWN</string>
    <string name="console_unknown">UNKNOWN</string>
    <string name="console_ps">PS</string>
    <string name="console_ps1">PS1</string>
    <string name="console_ps2">PS2</string>
    <string name="console_ps3">PS3</string>
    <string name="category_Price">price</string>
    <string name="hint_game_price">Insert Price</string>
    <string name="unknown_Price">no price</string>
    <string name="USD">usd</string>
    <string name="sci_fi">SCI-FI</string>
    <string name="photo_heading">Picture of Game</string>
    <string name="err_inserting_product">Error with Inserting</string>
    <string name="ok_updated">updated</string>
    <string name="error_game_stock">Game is out of Stock</string>
</resources>
