<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_game_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_name"
                android:inputType="textCapWords" />

        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_quantity" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="+" />

            <!-- quantity field -->
            <TextView
                android:id="@+id/edit_game_quantity"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="quantity" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

            <EditText
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:inputType="number"
                android:paddingTop="16dp"
                android:hint="Price"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <!-- Genre category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_genre" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- genre drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_genre"
                style="@style/CategoryStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />

        </LinearLayout>
    </LinearLayout>

    <!-- Console category -->
    <LinearLayout
        android:id="@+id/container_console"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_console" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- console drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_console"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/heading_photo"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_heading" />

        <ImageView
            android:id="@+id/game_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_below="@id/heading_photo"
            android:background="@mipmap/ic_launcher"
            android:paddingBottom="16dp" />
    </LinearLayout>
</LinearLayout>